# ec-bench

./: CMakeLists.txt  README.md
src/: constants.inc  fe.h  fe_gnu.S  fe_masm.asm  fe_mul_ed25519.inc  fe_mul_pallas.inc  fe_mul_vega.inc  fe_sqr_ed25519.inc  fe_sqr_pallas.inc  fe_sqr_vega.inc  main.c  platform.c  platform.h
